--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html{
 }
 header{
   color: #5B3D2E;
-  background-color: #BC704A;
+  background-color: #F5F1E8;
   margin: 0;
   display: flex;
   height: 10vh;
@@ -15,13 +15,13 @@ header{
 
 
 body{
-    background-color: whitesmoke;
-    font-family: 'Courier New', Courier, monospace;
+    background-color: #F5F1E8;
+    font-family: "Source Sans 3", sans-serif;
     margin: 0;
 }
 footer{
   color:#2F4842;
-  background-color: #BC704A;
+  background-color: #D9BAA0;
   display: block;
   width: 100%;
   height: 1vh;
@@ -48,15 +48,22 @@ ul{
   list-style: none;
 }
 h1{
-  font-family: "Grey Qo", cursive;
-  font-size: 5vh;
+   font-family: "Source Sans 3", sans-serif;
+   font-size: 5vh;
+   font-weight: 300;
 }
 h2{
-  font-size: 4vh;
+  font-family: "Source Sans 3", sans-serif;
+
+  font-size: 3vh;
+  font-weight: 250;
+}
+h3{
+  font-size: 2vh;
+  font-weight: 150;
 }
 hr{
   margin: 5% 30%;
-  border: 1px solid #2F4842;
 }
 
 
@@ -71,11 +78,7 @@ hr{
   margin: 5%;
 }
 
-@media (max-width: 1200px) {
-  footer{
-    position: absolute;
-  }
-}
+
 /*
 #B24038 - BERRY
 #A58E1E - PISTACCHIO
